# firekit

./: .gitignore  README.md  build.sh  dev.sh
client/: package-lock.json  package.json  svelte.config.js  vite.config.ts
client/src/: app.html
client/src/lib/actions/: clickOutside.ts
client/src/lib/components/: Footer.svelte
client/src/routes/: +layout.svelte  +page.svelte
client/src/routes/infos/: +page.svelte
client/src/routes/pokemon/: +page.svelte
client/src/routes/pokemon/[slug]/: +page.svelte
front/: package-lock.json  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
front/.svelte-kit/: ambient.d.ts
front/.svelte-kit/output/client/.vite/: manifest.json
front/.svelte-kit/output/client/_app/: version.json
front/.svelte-kit/output/prerendered/pages/: index.html  infos.html  pokemon.html
front/.svelte-kit/output/server/: internal.js  manifest-full.js  manifest.js
front/.svelte-kit/output/server/.vite/: manifest.json
front/.svelte-kit/output/server/chunks/: vendor.js
front/.svelte-kit/output/server/nodes/: 0.js  1.js  2.js  3.js  4.js  5.js
front/.svelte-kit/types/: route_meta_data.json
front/.svelte-kit/types/src/routes/: $types.d.ts
front/src/: app.d.ts  app.html
front/src/lib/components/: Footer.svelte  Nav.svelte
front/src/routes/: +layout.svelte  +page.svelte
front/src/routes/pokemon/[slug]/: +page.svelte
server/: Cargo.toml
server/.cargo/: config.toml
server/src/: main.rs
server/src/services/: pokemon.rs
tail/: Cargo.toml
tail/src/: main.rs
tail/src/services/: pokemon.rs
(+31 files in other folders)
