[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-embed="8.7.2"
actix-web = "4"
actix-cors = "0.7.1"
mime_guess = "=2.0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
futures = "0.3"
regex = "1.10"