[package]
name = "tail"
version = "0.1.0"
edition = "2021"

[dependencies]
ntex = { version = "2.17.0", features=["tokio"] }
ntex-cors = "2.1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
futures = "0.3"
include_dir = "0.7.4"
lazy_static = "1.5.0"

# [profile.release]
# opt-level = 3
# lto = "fat"
# codegen-units = 1
# strip = true
# panic = "abort"
# overflow-checks = false    # Disable overflow checks (use with caution)
